tests/cases/fail/import_alias_value_unsupported.p4
from import_alias_value_unsupported_helpers import seed as local_seed
